assets/css/style.css
/* ... */
strong {
  color: #E25D33;
}

.coding-skills {
  /*overflow: hidden;*/
}

.coding-skills table {
  margin: 0 auto;
}

.coding-skills td {
  position: relative;
}

.coding-icon {
  width: 40px;
  height: auto;
  padding-left: 20px;
  padding-top: 10px;
  padding-bottom: 30px;
}

.coding-skills td:after {
  content: attr(title);
  display: none;
  position: absolute;
  left: 70%;
  transform: translateX(-50%);
  bottom: 74px;
  background: #000;
  color: #fff;
  font-size: 12px;
  padding: 5px 10px;
  border-radius: 5px;
}

.coding-skills td:before {
  content: "";
  display: none;
  position: absolute;
  left: 70%;
  transform: translateX(-50%);
  bottom: 70px;
  border-top: 5px solid #000;
  border-bottom: 0;
  border-right: 5px solid transparent;
  border-left: 5px solid transparent;
}

.coding-skills td:hover:before,
.coding-skills td:hover:after {
  display: block;
}

/* about-me */

#main .secondary-h1 {
  font-size: 52px;
  padding-top: 20px;
  padding-bottom: 20px;
  margin: 0px;
}

.about-me {
  /*margin-left: 20px;
  margin-right: 20px;*/
  /*padding: 20px 20px;*/
  background-image:
  linear-gradient(
    #ffffff, #eeeeee
  );
  border-bottom: 5px solid #fff;
  position: relative;
}

.about-me a {
  text-decoration: underline;
}

.about-me a:hover {
  color: #E25D33;
}

.about-me p {
  font-size: 20px;
  margin: 0 auto;
  font-family: "Lato", sans-serif;
  font-weight: lighter;
  width: 600px;
  padding-bottom: 30px;
}

/* projects */
.projects {
  /*margin-left: 20px;
  margin-right: 20px;*/
  background-image:
  linear-gradient(
    #eeeeee, #ffffff
  );
  border-bottom: 5px solid #eee;
  overflow: hidden;
}

.project-window {
  display: block;
  width: 650px;
  margin: 3vw auto;
  position: relative;
  overflow: hidden;
  font-family: "Lato", sans-serif;
}

.project-window:nth-child(2){
  margin-top: 0vw;
}

.project-window img {
  float: left;
  height: 150px;
  width: auto;
  margin: 0px auto 0px 10px;
  border-top: 1px solid #aaa;
  border-bottom: 1px solid #aaa;
  border-left: 1px solid #aaa;
  border-right: 1px solid #aaa;
  position: relative;
  z-index: 5;
}

.project-window ul {
  float: left;
  color: #000;
  padding-left: 20px;
}

.project-window ul h2 {
  font-weight: lighter;
  font-size: 20px;
}

.project-window li {
  padding: 5px 0px;
  font-weight: lighter;
}


.project-window .live-link,
.project-window .github-link {
  position: absolute;
  left: 100px;
  font-size: 18px;
  z-index: 6;
  background: #fff;
  padding: 5px;
  border-radius: 5px;
  border: 1px solid #eee;
}

.project-window .live-link:hover,
.project-window .github-link:hover {
  background: #000;
  color: #fff;
  transition: 0s;
}

.project-window .live-link {
  top: 40px;
  z-index: 6;
}

.project-window .github-link {
  top: 80px;
  z-index: 6;
  left: 90px;
}

/* resume */
.resume {
  /*margin-left: 20px;
  margin-right: 20px;*/
  background-image:
  linear-gradient(
    #ffffff, #eeeeee
  );
  border-bottom: 5px solid #fff;
  position: relative;
}

.resume-viewer {
  margin: 0 auto;
  width: 600px;
  padding-top: 10px;
  padding-bottom: 20px;
  position: relative;
}

/* contact */
.contact {
  /*margin-left: 20px;
  margin-right: 20px;*/
  background-image:
  linear-gradient(
    #eeeeee, #ffffff
  );
  border-bottom: 5px solid #eee;
  position: relative;

}

.contact-page {
  margin: 0 auto;
  overflow: hidden;
  width: 634px;
}

.contact-page p {
  text-align: center;
  font-size: 30px;
}

.contact-box {
  float: left;
  padding: 20px 30px;
}

.contact img {
  height: 80px;
  width: auto;
  display: block;
  margin: 0 auto;
}

.contact p {
  margin: 0 auto;
  letter-spacing: 2px;
}

.contact-box:hover p {
  opacity: .5;
}
/* ... */

